2011-07-21  Adam Barth  <abarth@webkit.org>

        garden-o-matic should be able to rebaseline many tests at once
        https://bugs.webkit.org/show_bug.cgi?id=64963

        Reviewed by Dimitri Glazkov.

        This patch contains some UI for rebaselining tests in bulk.  I don't
        expect this UI to be the final UI, but the underlying infrastructure
        will be useful.

        * Scripts/webkitpy/tool/servers/data/gardeningserver/checkout.js:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/index.html:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/main.js:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/results.js:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/ui.js:

2011-07-21  Adam Barth  <abarth@webkit.org>

        garden-o-matic has trouble when the same test fails in different ways on diffrent bots
        https://bugs.webkit.org/show_bug.cgi?id=64830

        Unreviewed.  (Missing the patch is blocking me from fixing the tree.)

        This patch is just some minor bug fixes.  One of the bugs results from
        the sadness of having two representations (a list and a space-separated
        string) for the set of failure types.

        * Scripts/webkitpy/tool/servers/data/gardeningserver/results.js:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/results_unittests.js:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/ui.js:
        * Scripts/webkitpy/tool/servers/data/gardeningserver/ui_unittests.js:

2011-07-20  Ryosuke Niwa  <rniwa@webkit.org>

        Buildbot marks a nrwt bot red when tests are missing results
        https://bugs.webkit.org/show_bug.cgi?id=64812

        Reviewed by Adam Barth.

        The bug was caused by multiple expressions matching on the single output.
        Fixed it by exiting the loop as soon as one expression matches.

        Because the regular expression for 'failures' is most general,